# VideoSystem

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bk  tags
src/: .main.cpp.swp  main.cpp  tags
src/BlobDetection/: BlobDetection.cpp  BlobDetection.hpp
src/CameraInterface/: CameraInteface.cpp  CameraInteface.hpp  CameraInterface.cpp  CameraInterface.hpp  StereoInterface.cpp  StereoInterface.hpp
src/CameraMatrix/: CameraMatrix.cpp  CameraMatrix.hpp
src/DisparityMap/: DisparityMap.cpp  DisparityMap.hpp  Pixel.cpp  Pixel.hpp
src/FaceDetection/: FaceDetection.cpp  FaceDetection.hpp
src/ImageSubtractor/: ImageSubtractor.cpp  ImageSubtractor.hpp
src/ImageViewer/: ImageViewer.cpp  ImageViewer.hpp
src/ImageWriter/: ImageWriter.cpp  ImageWriter.hpp
src/JSONParser/: JSONParser.cpp  JSONParser.hpp
src/PeopleDetection/: PeopleDetection.cpp  PeopleDetection.hpp
src/PeopleDetectionHOG/: PeopleDetectionHOG.cpp  PeopleDetectionHOG.hpp
src/PoseEstimator/: PoseEstimator.hpp
src/PositionEstimator/: PositionEstimator.cpp  PositionEstimator.hpp
src/SituationKnowledge/: SituationKnowledge.hpp
src/StereoMatcher/: StereoMatcher.cpp  StereoMatcher.hpp
src/Utils/: DisableWarnings.hpp  Log.cpp  Log.hpp  TransformationMatrix.cpp  TransformationMatrix.hpp  Utils.hpp  print.cpp  print.hpp
src/Visualizer/: Visualizer.cpp  Visualizer.hpp
src/WindowManager/: .WindowManager.cpp.swp  .WindowManager.hpp.swp  WindowManager.cpp  WindowManager.hpp
